# Epiverse

./: .gitignore  .readthedocs.yaml  README.md  concat_test.ipynb  pyproject.toml  requirements.txt  scATAC_qc.ipynb
Epiverse/: __init__.py
Epiverse/Concat/: _concat.py
Epiverse/Read/: __init__.py
Epiverse/ScRNA/: __init__.py  _pyscenic.py
Epiverse/bulk/: __init__.py  _bigwig.py  _getScorePerBigWigBin.py  _mapreduce.py  _utilities.py
Epiverse/concat/: _concat.py
Epiverse/pl/: __init__.py  _motif.py
Epiverse/pp/: __init__.py  _concat.py  _gene_activity.py  _scATAC_qc.py
Epiverse/single/: __init__.py  _motif.py  _pseudobulk.py
Epiverse/utils/: __init__.py  _calculate.py  _data.py  _findgenes.py  _read.py
Epiverse_guide/: conf.py  mkdocs.yml
Epiverse_guide/docs/: Installation_guild.md  Release_notes.md  index.md
Epiverse_guide/docs/Tutorials-bulk/: t_bulk_visualize.ipynb  t_pp.ipynb
Epiverse_guide/docs/Tutorials-single/: t_findgenes.ipynb  t_gene_activity.ipynb  t_preprocess.ipynb  t_pseudobulk_visual.ipynb  t_single_concat.ipynb
Epiverse_guide/site/: index.html
Epiverse_guide/site/Installation_guild/: index.html
Epiverse_guide/site/Release_notes/: index.html
Epiverse_guide/site/Tutorials-bulk/t_pp/: index.html
Epiverse_guide/site/Tutorials-single/t_preprocess/: index.html
Epiverse_guide/site/api/: index.html
Epiverse_guide/site/gen_ref_pages/: index.html
SCATACpy/: __init__.py
SCATACpy/Concat/: __init__.py
scATACpy/Concat/: __Init__.py  _concat.py
scATACpy/Read/: __init__.py  _read.py
